src/test/ui/issues/issue-7364.stderr
error[E0277]: `RefCell<isize>` cannot be shared between threads safely
  --> $DIR/issue-7364.rs:6:15
   |
LL | static boxed: Box<RefCell<isize>> = box RefCell::new(0);
   |               ^^^^^^^^^^^^^^^^^^^ `RefCell<isize>` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `RefCell<isize>`
   = note: required because of the requirements on the impl of `Sync` for `Unique<RefCell<isize>>`
   = note: required because it appears within the type `Box<RefCell<isize>>`
   = note: shared static variables must have a type that implements `Sync`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
